--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,6 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS} src)
 
-add_executable(Solar-Runner src/main.cpp src/game.cpp src/controller.cpp src/renderer.cpp src/ship.cpp)
+add_executable(Solar-Runner src/main.cpp src/game.cpp src/controller.cpp src/renderer.cpp src/ship.cpp src/meteor.cpp)
 string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
 target_link_libraries(Solar-Runner ${SDL2_LIBRARIES})
